@@ -10,7 +10,7 @@ html() {
         append(var("hi"))
       }
       concat("h", concat("e", concat("l", concat("o", concat(" is ", var("hi"))))))
-      replace("h") {
+      replace_text("h") {
         set("H")
       }
     }
