@@ -7,3 +7,5 @@ CHANGES:
   * export.2 is now really export.1 { set(@2) } now. That means you can yield properly to export and set a dynamic value
   * regex() is now regexp()
   * use SET=classic instead of TESTSET when running tests
+  * replace() is now replace_regexp() and replace_text()
+    * macros sort it for you -- unlikely that users will ever use the two specific methods
